omada-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
  namespace: omada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omada-controller
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      containers:
      - name: omada-controller
        image: mbentley/omada-controller:5.13
        ports:
        - containerPort: 8088
          protocol: TCP
          name: http
        - containerPort: 8043
          protocol: TCP
          name: https
        - containerPort: 8843
          protocol: TCP
          name: portal
        - containerPort: 27001
          protocol: TCP
          name: app-discovery
        - containerPort: 29812
          protocol: TCP
          name: adopt-v1
        - containerPort: 29813
          protocol: TCP
          name: upgrade-v1
        - containerPort: 29811
          protocol: TCP
          name: manager-v1
        - containerPort: 29814
          protocol: TCP
          name: manager-v2
        - containerPort: 29810
          protocol: TCP
          name: discovery
        - containerPort: 29815
          protocol: TCP
          name: transfer-v2
        - containerPort: 29816
          protocol: TCP
          name: rtty
        volumeMounts:
        - name: omada-data
          mountPath: /opt/tplink/EAPController/data
        - name: omada-logs
          mountPath: /opt/tplink/EAPController/logs
      volumes:
      - name: omada-data
        persistentVolumeClaim:
          claimName: omada-data-pvc
      - name: omada-logs
        persistentVolumeClaim:
          claimName: omada-logs-pvc
