omada-controller/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-service
  namespace: omada
spec:
  selector:
    app: omada-controller
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8088
      targetPort: 8088
    - name: https
      protocol: TCP
      port: 8043
      targetPort: 8043
    - name: portal
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: mongo1
      protocol: TCP
      port: 27001
      targetPort: 27001
    - name: mongo2
      protocol: TCP
      port: 27002
      targetPort: 27002
    - name: mongo3
      protocol: TCP
      port: 27017
      targetPort: 27017
