omada-controller/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-ingress
  namespace: omada
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: omada.192.168.0.151.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omada-service
            port:
              number: 8088
